[package]
name = "rayca-gltf"
version = "0.1.0"
edition = "2024"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
license = "MIT"

[dependencies]
rayca-math = { git = "https://github.com/fahien/rayca-math.git" }
rayca-util = { git = "https://github.com/fahien/rayca-util.git" }
rayca-geometry = { git = "https://github.com/fahien/rayca-geometry.git" }
gltf = "1.4.*"
base64 = "0.22.1"
serde_json = "1.0.*"
serde = { version = "1.0.*", features = [ "serde_derive" ] }
bon = "3.6.*"
